--- a/notebooks/sanity_check.ipynb
+++ b/notebooks/sanity_check.ipynb
@@ -15,10 +15,12 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "time: 8.11 ms (started: 2021-05-04 13:02:12 -03:00)\n"
+      "The autoreload module is not an IPython extension.\n",
+      "time: 4.42 ms (started: 2021-05-12 12:42:42 -03:00)\n",
+      "UsageError: Line magic function `%autoreload` not found.\n"
      ]
     }
    ],
@@ -26,39 +28,37 @@
     "%load_ext autotime\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "time: 1.03 ms (started: 2021-05-12 12:43:07 -03:00)\n"
+     ]
+    }
+   ],
+   "source": [
     "import sys\n",
     "sys.path.append('../')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "\n",
-      "                  ___________    ____\n",
-      "  ________ __ ___/ / ____/   |  / __ \\\n",
-      " / ___/ __` / __  / /   / /| | / / / /\n",
-      "/ /__/ /_/ / /_/ / /___/ ___ |/ /_/ /\n",
-      "\\___/\\__,_/\\__,_/\\____/_/  |_/_____/\n",
-      "by cadCAD\n",
-      "\n",
-      "Execution Mode: local_proc\n",
-      "Configuration Count: 1\n",
-      "Dimensions of the first simulation: (Timesteps, Params, Runs, Vars) = (100, 21, 1, 30)\n",
-      "Execution Method: local_simulations\n",
-      "SimIDs   : [0]\n",
-      "SubsetIDs: [0]\n",
-      "Ns       : [0]\n",
-      "ExpIDs   : [0]\n",
-      "Execution Mode: single_threaded\n",
-      "Total execution time: 0.01s\n",
-      "time: 798 ms (started: 2021-05-04 13:05:13 -03:00)\n"
+      "\n                  ___________    ____\n  ________ __ ___/ / ____/   |  / __ \\\n / ___/ __` / __  / /   / /| | / / / /\n/ /__/ /_/ / /_/ / /___/ ___ |/ /_/ /\n\\___/\\__,_/\\__,_/\\____/_/  |_/_____/\nby cadCAD\n\nExecution Mode: local_proc\nConfiguration Count: 1\nDimensions of the first simulation: (Timesteps, Params, Runs, Vars) = (100, 17, 1, 28)\nExecution Method: local_simulations\nSimIDs   : [0]\nSubsetIDs: [0]\nNs       : [0]\nExpIDs   : [0]\nExecution Mode: single_threaded\nTotal execution time: 0.07s\ntime: 154 ms (started: 2021-05-12 12:43:08 -03:00)\n"
      ]
     }
    ],
@@ -77,140 +77,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cdp_metrics</th>\n",
-       "      <th>timedelta</th>\n",
-       "      <th>cumulative_time</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>blockheight</th>\n",
-       "      <th>eth_price</th>\n",
-       "      <th>cdps</th>\n",
-       "      <th>eth_collateral</th>\n",
-       "      <th>eth_locked</th>\n",
-       "      <th>eth_freed</th>\n",
-       "      <th>...</th>\n",
-       "      <th>redemption_rate</th>\n",
-       "      <th>error_star</th>\n",
-       "      <th>error_star_integral</th>\n",
-       "      <th>market_slippage</th>\n",
-       "      <th>RAI_balance</th>\n",
-       "      <th>ETH_balance</th>\n",
-       "      <th>simulation</th>\n",
-       "      <th>subset</th>\n",
-       "      <th>run</th>\n",
-       "      <th>timestep</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>{}</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2017-01-01</td>\n",
-       "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>open  time     locked       drawn  wiped  f...</td>\n",
-       "      <td>9106000.0</td>\n",
-       "      <td>9106000.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10000000.0</td>\n",
-       "      <td>6280000.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>{}</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2017-01-01</td>\n",
-       "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>open  time     locked       drawn  wiped  f...</td>\n",
-       "      <td>9106000.0</td>\n",
-       "      <td>9106000.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10000000.0</td>\n",
-       "      <td>6280000.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2 rows × 34 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  cdp_metrics  timedelta  cumulative_time  timestamp  blockheight eth_price  \\\n",
-       "0          {}          0                0 2017-01-01            0      None   \n",
-       "1          {}          0                0 2017-01-01            0      None   \n",
+       "   timedelta  cumulative_time  blockheight  eth_price  \\\n",
+       "0          0                0            0        5.0   \n",
+       "1          0                0            0        5.0   \n",
        "\n",
        "                                                cdps  eth_collateral  \\\n",
-       "0     open  time     locked       drawn  wiped  f...       9106000.0   \n",
-       "1     open  time     locked       drawn  wiped  f...       9106000.0   \n",
+       "0     open  time  locked  drawn  wiped  freed  w_...             100   \n",
+       "1     open  time  locked  drawn  wiped  freed  w_...             100   \n",
        "\n",
-       "   eth_locked  eth_freed  ...  redemption_rate  error_star  \\\n",
-       "0   9106000.0          0  ...              0.0           0   \n",
-       "1   9106000.0          0  ...              0.0           0   \n",
+       "   eth_locked  eth_freed  eth_bitten  principal_debt  ...  redemption_rate  \\\n",
+       "0         100        0.0         0.0             200  ...              0.2   \n",
+       "1         100        0.0         0.0             200  ...              0.2   \n",
        "\n",
-       "   error_star_integral  market_slippage  RAI_balance  ETH_balance  simulation  \\\n",
-       "0                    0                0   10000000.0    6280000.0           0   \n",
-       "1                    0                0   10000000.0    6280000.0           0   \n",
+       "   error_star  error_star_integral  market_slippage  RAI_balance  ETH_balance  \\\n",
+       "0         0.0                  0.0              0.0          100          100   \n",
+       "1         0.0                  0.0              0.0          100          100   \n",
        "\n",
-       "   subset  run  timestep  \n",
-       "0       0    1         0  \n",
-       "1       0    1         1  \n",
+       "   simulation  subset  run  timestep  \n",
+       "0           0       0    1         0  \n",
+       "1           0       0    1         1  \n",
        "\n",
-       "[2 rows x 34 columns]"
-      ]
+       "[2 rows x 32 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>timedelta</th>\n      <th>cumulative_time</th>\n      <th>blockheight</th>\n      <th>eth_price</th>\n      <th>cdps</th>\n      <th>eth_collateral</th>\n      <th>eth_locked</th>\n      <th>eth_freed</th>\n      <th>eth_bitten</th>\n      <th>principal_debt</th>\n      <th>...</th>\n      <th>redemption_rate</th>\n      <th>error_star</th>\n      <th>error_star_integral</th>\n      <th>market_slippage</th>\n      <th>RAI_balance</th>\n      <th>ETH_balance</th>\n      <th>simulation</th>\n      <th>subset</th>\n      <th>run</th>\n      <th>timestep</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>5.0</td>\n      <td>open  time  locked  drawn  wiped  freed  w_...</td>\n      <td>100</td>\n      <td>100</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>200</td>\n      <td>...</td>\n      <td>0.2</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>100</td>\n      <td>100</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>5.0</td>\n      <td>open  time  locked  drawn  wiped  freed  w_...</td>\n      <td>100</td>\n      <td>100</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>200</td>\n      <td>...</td>\n      <td>0.2</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>100</td>\n      <td>100</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>2 rows × 32 columns</p>\n</div>"
      },
-     "execution_count": 12,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 5
     },
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "time: 46.9 ms (started: 2021-05-04 13:05:15 -03:00)\n"
+      "time: 152 ms (started: 2021-05-12 12:43:11 -03:00)\n"
      ]
     }
    ],
@@ -289,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
