--- a/data/Systems_Identification_Fitting.ipynb
+++ b/data/Systems_Identification_Fitting.ipynb
@@ -15,7 +15,7 @@
     "* Created inverse transformations\n",
     "* Fit one step forward VAR model that takes the difference between local arbitrager values and observed values and forcasts the errors within the coordinate transformation state.\n",
     "* Fit VARMAX model with exogenous signal - error between redemption price and rai market price - retrain after every timestep \n",
-    "* Compare VARMAX vs VAR model\n",
+    "* Compare VARMAX vs VAR model (we chose VARMAX with an exogenous signal)\n",
     "* Refactor to functions for deployment\n",
     "\n",
     "\n",
@@ -227,8 +227,6 @@
     "import numpy as np\n",
     "from scipy import stats\n",
     "import math\n",
-    "\n",
-    "\n",
     "import statsmodels.api as sm\n",
     "from statsmodels.tsa.api import VAR, VARMAX\n",
     "#from sklearn.preprocessing import PowerTransformer\n",
@@ -244,29 +242,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save block numbers\n",
-    "blockNumbers = states.block_number.values"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 465,
    "metadata": {},
    "outputs": [],
    "source": [
-    "states['RedemptionPriceinEth'] = states['RedemptionPrice'] / states['ETH Price (OSM)']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 466,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# add additional state variables\n",
+    "states['RedemptionPriceinEth'] = states['RedemptionPrice'] / states['ETH Price (OSM)']\n",
     "states['RedemptionPriceError'] = states['RedemptionPrice'] - states['marketPriceUsd']"
    ]
   },
@@ -351,7 +332,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# constants\n",
+    "# define constants (will come from cadCAD model but added here for calculations)\n",
     "params = {\n",
     "    'liquidation_ratio': Lbar,\n",
     "    'debt_ceiling': 1e9,\n",
@@ -364,7 +345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Arbtrageur data"
+    "## Create Arbtrageur data vector $u^*$"
    ]
   },
   {
@@ -473,21 +454,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# subset state variables for arbitrageur vector\n",
     "state_subset = states[['marketPriceUsd','RedemptionPrice','ETH Price (OSM)','collateral',\n",
     "                       'EthInUniswap','RaiInUniswap','RaiDrawnFromSAFEs']]\n",
-    "\n",
+    "# map state data to arbitrageur vector fields \n",
     "state_subset.columns = ['market_price','target_price','eth_price','SAFE_Collateral',\n",
     "                       'ETH_balance','RAI_balance','SAFE_Debt']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 470,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "values = []\n",
-    "values.append(get_aggregated_arbitrageur_decision(params,state_subset.loc[0]))"
    ]
   },
   {
@@ -577,11 +549,14 @@
     }
    ],
    "source": [
+    "# create list of u^* vectors\n",
     "values = []\n",
     "\n",
+    "# iterate through real data to create u^* and save to values\n",
     "for i in range(0,len(state_subset)):\n",
     "    values.append(get_aggregated_arbitrageur_decision(params,state_subset.loc[i]))\n",
     "    \n",
+    "# create historic u^* dataframe\n",
     "local = pd.DataFrame(values)\n",
     "local.columns = ['Q','D','Rrai','Reth']\n",
     "local.head()"
@@ -591,7 +566,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Coordinate Transformations TODO: add contraints\n",
+    "## Coordinate Transformations TODO: add contraints to here and functions\n",
     "\n",
     "1. $\\alpha := \\frac{d}{\\bar{D}}$\n",
     "\n",
@@ -623,6 +598,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# function to create coordinate transformations\n",
     "def coordinate_transformations(params,df,Q,R_eth,R_rai,D,RedemptionPrice,EthPrice ):\n",
     "    '''\n",
     "    Description:\n",
@@ -1043,7 +1019,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Autogressive lag selection"
+    "<!-- ### Autogressive lag selection -->"
    ]
   },
   {
@@ -1065,30 +1041,30 @@
     }
    ],
    "source": [
-    "aic = []\n",
-    "for i in range(1,16):\n",
-    "    model = VAR(train)\n",
-    "    results = model.fit(i,ic='aic')\n",
-    "    aic.append(results.aic)\n",
+    "# aic = []\n",
+    "# for i in range(1,16):\n",
+    "#     model = VAR(train)\n",
+    "#     results = model.fit(i,ic='aic')\n",
+    "#     aic.append(results.aic)\n",
     "    \n",
     "    \n",
-    "plt.figure(figsize=(10, 8))\n",
-    "plt.plot(aic, 'r+')\n",
-    "plt.legend(['AIC'])\n",
-    "plt.xlabel('Autocorrelation Lag')\n",
-    "plt.ylabel('AIC')\n",
-    "plt.title('Plot of sweeps over lag depths over AIC Loss functions')\n",
-    "plt.show()"
+    "# plt.figure(figsize=(10, 8))\n",
+    "# plt.plot(aic, 'r+')\n",
+    "# plt.legend(['AIC'])\n",
+    "# plt.xlabel('Autocorrelation Lag')\n",
+    "# plt.ylabel('AIC')\n",
+    "# plt.title('Plot of sweeps over lag depths over AIC Loss functions')\n",
+    "# plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given a set of candidate models for the data, **the preferred model is the one with the minimum AIC value, the sign of the data does not matter**. AIC optimizes for goodness of fit but also includes a penalty for each additional parameter, which discourages overfitting. In our case, this appears that a lag of ***7*** is optimal.\n",
+    "<!-- Given a set of candidate models for the data, **the preferred model is the one with the minimum AIC value, the sign of the data does not matter**. AIC optimizes for goodness of fit but also includes a penalty for each additional parameter, which discourages overfitting. In our case, this appears that a lag of ***7*** is optimal.\n",
     "\n",
     "\n",
-    "For a VARMAX model, which we have decided to use, an order of 1 is selected."
+    "For a VARMAX model, which we have decided to use, an order of 1 is selected. -->"
    ]
   },
   {
@@ -1652,7 +1628,9 @@
   {
    "cell_type": "code",
    "execution_count": 492,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
