--- a/data/Systems_Identification_Fitting.ipynb
+++ b/data/Systems_Identification_Fitting.ipynb
@@ -269,13 +269,18 @@
     "\n",
     "3. Difference the local coordiante from the observed to get error\n",
     "\n",
-    "4. Train VARMAX the errors + exogenous signal[s]\n",
+    "4. Perform a Yeo-Johnson power transformation\n",
+    "<!-- 4. Train VARMAX the errors + exogenous signal[s]\n",
+    " -->\n",
+    "5. Train a VAR(15) model\n",
     "\n",
-    "5. One step forecast\n",
+    "6. One step forecast\n",
     "\n",
-    "5. Convert forecasted values back from coordinate system \n",
+    "7. Invert the Yeo-Johnson power transformation\n",
     "\n",
-    "6. Add forecasted values to previous state to get new state \n",
+    "8. Convert forecasted values back from coordinate system \n",
+    "\n",
+    "9. Add forecasted values to previous state to get new state \n",
     "\n",
     "\n",
     "### Mapping of specification states to data\n",
@@ -1620,7 +1625,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given a set of candidate models for the data, **the preferred model is the one with the minimum AIC value, the sign of the data does not matter**. AIC optimizes for goodness of fit but also includes a penalty for each additional parameter, which discourages overfitting. In our case, this appears that a lag of ***6*** is optimal.\n",
+    "Given a set of candidate models for the data, **the preferred model is the one with the minimum AIC value, the sign of the data does not matter**. AIC optimizes for goodness of fit but also includes a penalty for each additional parameter, which discourages overfitting. In our case, this appears that a lag of ***15*** is optimal.\n",
     "\n",
     "\n",
     "For a VARMAX model, which we have decided to use, an order of 1 is selected. To determine which model performs better overall for predictions, given the computational constraints that VARMAX is too slow to be retrained at each timestep, a [validation notebook](VAR_vs_VARMAX_evaluation.ipynb) was created to test if a VAR retrained every timestep vs a VARMAX retrained very 20 predictions. The result over 20 predictions was that VAR performed best for alpha, gamma, and delta but VARMAX performed better with beta by a higher magnitude than VAR. "
