--- a/data/data_acquisition.ipynb
+++ b/data/data_acquisition.ipynb
@@ -1315,6 +1315,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "safehistories = []\n",
+    "for i in blocknumbers[1:]:\n",
+    "    query = '''\n",
+    "    {\n",
+    "      safes(block: {number:%s}) {\n",
+    "            collateral\n",
+    "            debt\n",
+    "      }\n",
+    "    }\n",
+    "    ''' % i\n",
+    "    r = requests.post(url, json = {'query':query})\n",
+    "    s = json.loads(r.content)['data']['safes']\n",
+    "    t = pd.DataFrame(s)\n",
+    "    t['collateral'] = t['collateral'].astype(float)\n",
+    "    t['debt'] = t['debt'].astype(float)\n",
+    "    safehistories.append(pd.DataFrame(t.sum().to_dict(),index=[0]))\n",
+    "\n",
+    "safe_history = pd.concat(safehistories)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 266,
    "metadata": {},
    "outputs": [
