moving files and adding to readme

--- a/notebooks/Systems_Identification_Fitting.ipynb
+++ b/notebooks/Systems_Identification_Fitting.ipynb
@@ -235,9 +235,10 @@
     "from sklearn.preprocessing import PowerTransformer\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
+    "import os\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "\n",
+    "os.chdir('..')\n",
     "states = pd.read_csv('states.csv')\n",
     "del states['Unnamed: 0']\n",
     "states.head()"
