--- a/notebooks/VAR_vs_VARMAX_evaluation.ipynb
+++ b/notebooks/VAR_vs_VARMAX_evaluation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 615,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -48,119 +48,113 @@
        "      <th>RedemptionRateHourlyRate</th>\n",
        "      <th>RedemptionRateEightHourlyRate</th>\n",
        "      <th>RedemptionPrice</th>\n",
-       "      <th>EthInUniswap</th>\n",
-       "      <th>RaiInUniswap</th>\n",
        "      <th>RaiDrawnFromSAFEs</th>\n",
        "      <th>collateral</th>\n",
        "      <th>debt</th>\n",
        "      <th>ETH Price (OSM)</th>\n",
+       "      <th>block_timestamp</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.000858</td>\n",
-       "      <td>3.051840</td>\n",
-       "      <td>12388143.0</td>\n",
+       "      <td>0.002481</td>\n",
+       "      <td>4.362594</td>\n",
+       "      <td>11860755</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.632464e+07</td>\n",
-       "      <td>1.157921e+32</td>\n",
-       "      <td>230002.364951</td>\n",
-       "      <td>583.0</td>\n",
-       "      <td>0.978704</td>\n",
-       "      <td>0.999998</td>\n",
-       "      <td>0.99998</td>\n",
-       "      <td>3.005443</td>\n",
-       "      <td>11977.048864</td>\n",
-       "      <td>1.389236e+07</td>\n",
-       "      <td>2.601571e+07</td>\n",
-       "      <td>1249.4226</td>\n",
-       "      <td>293469.366076</td>\n",
-       "      <td>3521.749280</td>\n",
+       "      <td>2788.522358</td>\n",
+       "      <td>115792089237316195423570985008687.9</td>\n",
+       "      <td>0.068533</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.14</td>\n",
+       "      <td>2788.440433</td>\n",
+       "      <td>14.89236</td>\n",
+       "      <td>2788.385291</td>\n",
+       "      <td>1803.656430</td>\n",
+       "      <td>2021-02-15 10:16:16+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.000858</td>\n",
-       "      <td>3.051840</td>\n",
-       "      <td>12387897.0</td>\n",
+       "      <td>0.002481</td>\n",
+       "      <td>4.419266</td>\n",
+       "      <td>11861008</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.632464e+07</td>\n",
-       "      <td>1.157921e+32</td>\n",
-       "      <td>230002.364951</td>\n",
-       "      <td>583.0</td>\n",
-       "      <td>0.978704</td>\n",
-       "      <td>0.999998</td>\n",
-       "      <td>0.99998</td>\n",
-       "      <td>3.005450</td>\n",
-       "      <td>12025.302340</td>\n",
-       "      <td>1.383645e+07</td>\n",
-       "      <td>2.601571e+07</td>\n",
-       "      <td>1249.4226</td>\n",
-       "      <td>293469.366076</td>\n",
-       "      <td>3484.967617</td>\n",
+       "      <td>2788.657935</td>\n",
+       "      <td>115792089237316195423570985008687.9</td>\n",
+       "      <td>0.108751</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.14</td>\n",
+       "      <td>2788.440433</td>\n",
+       "      <td>14.89236</td>\n",
+       "      <td>2788.385291</td>\n",
+       "      <td>1763.974936</td>\n",
+       "      <td>2021-02-15 11:13:28+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.000869</td>\n",
-       "      <td>3.060763</td>\n",
-       "      <td>12387633.0</td>\n",
+       "      <td>0.002481</td>\n",
+       "      <td>4.419266</td>\n",
+       "      <td>11861237</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.629462e+07</td>\n",
-       "      <td>1.157921e+32</td>\n",
-       "      <td>229927.716817</td>\n",
-       "      <td>583.0</td>\n",
-       "      <td>0.978704</td>\n",
-       "      <td>0.999998</td>\n",
-       "      <td>0.99998</td>\n",
-       "      <td>3.005465</td>\n",
-       "      <td>12033.680708</td>\n",
-       "      <td>1.382679e+07</td>\n",
-       "      <td>2.598571e+07</td>\n",
-       "      <td>1249.4226</td>\n",
-       "      <td>293469.366076</td>\n",
-       "      <td>3509.940000</td>\n",
+       "      <td>2788.657935</td>\n",
+       "      <td>115792089237316195423570985008687.9</td>\n",
+       "      <td>0.108751</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.14</td>\n",
+       "      <td>2788.440433</td>\n",
+       "      <td>14.89236</td>\n",
+       "      <td>2788.385291</td>\n",
+       "      <td>1763.974936</td>\n",
+       "      <td>2021-02-15 12:07:36+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.000870</td>\n",
-       "      <td>3.051668</td>\n",
-       "      <td>12387345.0</td>\n",
+       "      <td>0.001769</td>\n",
+       "      <td>3.215446</td>\n",
+       "      <td>11861502</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.629462e+07</td>\n",
-       "      <td>1.157921e+32</td>\n",
-       "      <td>229927.716817</td>\n",
-       "      <td>583.0</td>\n",
-       "      <td>0.978704</td>\n",
-       "      <td>0.999998</td>\n",
-       "      <td>0.99998</td>\n",
-       "      <td>3.005465</td>\n",
-       "      <td>12033.680708</td>\n",
-       "      <td>1.382679e+07</td>\n",
-       "      <td>2.598571e+07</td>\n",
-       "      <td>1249.4226</td>\n",
-       "      <td>293469.366076</td>\n",
-       "      <td>3438.463957</td>\n",
+       "      <td>3048.645955</td>\n",
+       "      <td>115792089237316195423570985008687.9</td>\n",
+       "      <td>0.116162</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.14</td>\n",
+       "      <td>3048.440433</td>\n",
+       "      <td>16.89236</td>\n",
+       "      <td>3048.358490</td>\n",
+       "      <td>1775.977923</td>\n",
+       "      <td>2021-02-15 13:07:59+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.000875</td>\n",
-       "      <td>3.043224</td>\n",
-       "      <td>12387095.0</td>\n",
+       "      <td>0.001769</td>\n",
+       "      <td>3.215446</td>\n",
+       "      <td>11861791</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.629407e+07</td>\n",
-       "      <td>1.157921e+32</td>\n",
-       "      <td>229903.041060</td>\n",
-       "      <td>583.0</td>\n",
-       "      <td>0.978704</td>\n",
-       "      <td>0.999998</td>\n",
-       "      <td>0.99998</td>\n",
-       "      <td>3.005472</td>\n",
-       "      <td>12080.165571</td>\n",
-       "      <td>1.377424e+07</td>\n",
-       "      <td>2.598521e+07</td>\n",
-       "      <td>1249.4226</td>\n",
-       "      <td>293469.366076</td>\n",
-       "      <td>3464.125574</td>\n",
+       "      <td>3048.645955</td>\n",
+       "      <td>115792089237316195423570985008687.9</td>\n",
+       "      <td>0.116162</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.14</td>\n",
+       "      <td>3048.440433</td>\n",
+       "      <td>16.89236</td>\n",
+       "      <td>3048.358490</td>\n",
+       "      <td>1805.792735</td>\n",
+       "      <td>2021-02-15 14:07:59+00:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -168,42 +162,49 @@
       ],
       "text/plain": [
        "   marketPriceEth  marketPriceUsd  block_number  debtAvailableToSettle  \\\n",
-       "0        0.000858        3.051840    12388143.0                    0.0   \n",
-       "1        0.000858        3.051840    12387897.0                    0.0   \n",
-       "2        0.000869        3.060763    12387633.0                    0.0   \n",
-       "3        0.000870        3.051668    12387345.0                    0.0   \n",
-       "4        0.000875        3.043224    12387095.0                    0.0   \n",
+       "0        0.002481        4.362594      11860755                    0.0   \n",
+       "1        0.002481        4.419266      11861008                    0.0   \n",
+       "2        0.002481        4.419266      11861237                    0.0   \n",
+       "3        0.001769        3.215446      11861502                    0.0   \n",
+       "4        0.001769        3.215446      11861791                    0.0   \n",
        "\n",
-       "     globalDebt  globalDebtCeiling  systemSurplus  totalActiveSafeCount  \\\n",
-       "0  2.632464e+07       1.157921e+32  230002.364951                 583.0   \n",
-       "1  2.632464e+07       1.157921e+32  230002.364951                 583.0   \n",
-       "2  2.629462e+07       1.157921e+32  229927.716817                 583.0   \n",
-       "3  2.629462e+07       1.157921e+32  229927.716817                 583.0   \n",
-       "4  2.629407e+07       1.157921e+32  229903.041060                 583.0   \n",
+       "    globalDebt                    globalDebtCeiling  systemSurplus  \\\n",
+       "0  2788.522358  115792089237316195423570985008687.9       0.068533   \n",
+       "1  2788.657935  115792089237316195423570985008687.9       0.108751   \n",
+       "2  2788.657935  115792089237316195423570985008687.9       0.108751   \n",
+       "3  3048.645955  115792089237316195423570985008687.9       0.116162   \n",
+       "4  3048.645955  115792089237316195423570985008687.9       0.116162   \n",
        "\n",
-       "   RedemptionRateAnnualizedRate  RedemptionRateHourlyRate  \\\n",
-       "0                      0.978704                  0.999998   \n",
-       "1                      0.978704                  0.999998   \n",
-       "2                      0.978704                  0.999998   \n",
-       "3                      0.978704                  0.999998   \n",
-       "4                      0.978704                  0.999998   \n",
+       "   totalActiveSafeCount  RedemptionRateAnnualizedRate  \\\n",
+       "0                     3                           1.0   \n",
+       "1                     3                           1.0   \n",
+       "2                     3                           1.0   \n",
+       "3                     3                           1.0   \n",
+       "4                     3                           1.0   \n",
        "\n",
-       "   RedemptionRateEightHourlyRate  RedemptionPrice  EthInUniswap  RaiInUniswap  \\\n",
-       "0                        0.99998         3.005443  11977.048864  1.389236e+07   \n",
-       "1                        0.99998         3.005450  12025.302340  1.383645e+07   \n",
-       "2                        0.99998         3.005465  12033.680708  1.382679e+07   \n",
-       "3                        0.99998         3.005465  12033.680708  1.382679e+07   \n",
-       "4                        0.99998         3.005472  12080.165571  1.377424e+07   \n",
+       "   RedemptionRateHourlyRate  RedemptionRateEightHourlyRate  RedemptionPrice  \\\n",
+       "0                       1.0                            1.0             3.14   \n",
+       "1                       1.0                            1.0             3.14   \n",
+       "2                       1.0                            1.0             3.14   \n",
+       "3                       1.0                            1.0             3.14   \n",
+       "4                       1.0                            1.0             3.14   \n",
        "\n",
-       "   RaiDrawnFromSAFEs  collateral           debt  ETH Price (OSM)  \n",
-       "0       2.601571e+07   1249.4226  293469.366076      3521.749280  \n",
-       "1       2.601571e+07   1249.4226  293469.366076      3484.967617  \n",
-       "2       2.598571e+07   1249.4226  293469.366076      3509.940000  \n",
-       "3       2.598571e+07   1249.4226  293469.366076      3438.463957  \n",
-       "4       2.598521e+07   1249.4226  293469.366076      3464.125574  "
+       "   RaiDrawnFromSAFEs  collateral         debt  ETH Price (OSM)  \\\n",
+       "0        2788.440433    14.89236  2788.385291      1803.656430   \n",
+       "1        2788.440433    14.89236  2788.385291      1763.974936   \n",
+       "2        2788.440433    14.89236  2788.385291      1763.974936   \n",
+       "3        3048.440433    16.89236  3048.358490      1775.977923   \n",
+       "4        3048.440433    16.89236  3048.358490      1805.792735   \n",
+       "\n",
+       "             block_timestamp  \n",
+       "0  2021-02-15 10:16:16+00:00  \n",
+       "1  2021-02-15 11:13:28+00:00  \n",
+       "2  2021-02-15 12:07:36+00:00  \n",
+       "3  2021-02-15 13:07:59+00:00  \n",
+       "4  2021-02-15 14:07:59+00:00  "
       ]
      },
-     "execution_count": 615,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,12 +221,14 @@
     "from sklearn.preprocessing import PowerTransformer\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
+    "import os\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "%matplotlib inline \n",
     "\n",
+    "os.chdir('..')\n",
     "\n",
-    "states = pd.read_csv('states.csv')\n",
+    "states = pd.read_csv('data/states.csv')\n",
     "del states['Unnamed: 0']\n",
     "states.head()"
    ]
