--- a/notebooks/data_acquisition.ipynb
+++ b/notebooks/data_acquisition.ipynb
@@ -43,6 +43,7 @@
     "import numpy as np\n",
     "import json\n",
     "import requests\n",
+    "import os\n",
     "# The Graph URL\n",
     "url = 'https://api.thegraph.com/subgraphs/name/reflexer-labs/rai-mainnet'\n",
     "\n",
@@ -2336,7 +2337,7 @@
     }
    ],
    "source": [
-    "states.tail(20)"
+    "states.tail(10)"
    ]
   },
   {
@@ -2345,8 +2346,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.chdir('..')\n",
     "# export\n",
-    "states.to_csv('states.csv')"
+    "states.to_csv('data/states.csv')"
    ]
   }
  ],
